paasmaker/static/css/paasmaker.css
/* Paasmaker CSS */

/* Login page */
.index_column { width: 45%; float: left; margin: 20px; }

/* Overview / dashboard page */
.overview_block { width: 30%; float: left; margin: 10px; }
.router-stats-collection { clear: both; padding-top: 40px; }
.overview_block table td { min-width: 5em; }
td.overview_count { text-align: right; }
.overview_more_link { margin-top: 1em; font-style: italic; }

/* Ajax interface loader */
.loading-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; text-align: center; background: white; opacity: 0; }
.loading-overlay img { position: absolute; top: 50%; }

/* Instance log / job log display */
a.toggle { text-decoration: none; }

/* UUID display for instances, nodes etc. */
td.contains-uuid { width: 265px; }
code.uuid-shrink { cursor: pointer; }

/* COMMON CSS STYLES */
ul.errors
{
	color: red;
	margin: 0px;
	list-style-type: none;
}

div.btn-group-header
{
	padding-bottom: 5px;
}

div.table-button-box form
{
	display: inline;
	margin: 0px;
}

textarea.example-configuration
{
	width: 100%;
	height: 600px;
	white-space: pre;
	font-family: monospace;
}

/* PAGINATION */
.pagination
{
	text-align: center;
}

/* JOB STATUSES */
.job-root
{
	margin-bottom: 10px;
}

.job-status .state
{
	float: left;
}

.icon-loading
{
	background-image: url('../img/loading.gif');
	background-position: center center;
}

.job-status
{
	padding-left: 15px;
	padding-top: 2px;
	padding-bottom: 2px;
	position: relative;
}

.job-status.level0
{
	padding-left: 0px;
}

.job-status .toolbox
{
	margin-left: 5px;
	float: left;
}

.job-status .details .title
{
	margin-left: 50px;
	display: block;
}

.job-status .details .summary
{
	margin-left: 50px;
	display: block;
}

.job-status .log
{
	display: none;
	height: 150px;
	overflow: auto;
}

.job-status .log.no-data
{
	height: auto;
}

/* Summary jobs view */
.job-overview .details .title { margin-left: 5px; }
.job-overview li { list-style-type: none; }

/* INSTANCE LOGS */
.instance-log-container pre
{
	height: 150px;
	overflow: auto;
}

/* ROUTER STATS */
.router-stats, .router-no-stats
{
	margin-bottom: 10px;

	float: right;
	right: 0px;

	min-height: 85px;
	width: 250px;
}

.router-stats .complete-title
{
	text-align: center;
	font-weight: bold;
}

.router-stats .stats-row .title
{
	display: block;
	float: left;
}

.router-stats .stats-row .value
{
	display: block;
	float: right;
	text-align: right;
}

.router-stats .stats-row .value .diff
{
}

.router-stats .stats-row.stat-1xx_percentage,
.router-stats .stats-row.stat-2xx_percentage,
.router-stats .stats-row.stat-3xx_percentage,
.router-stats .stats-row.stat-4xx_percentage,
.router-stats .stats-row.stat-5xx_percentage
{
	display: none;
}

.router-stats .secondary
{
	display: none;
}

.router-stats .graph
{
	margin-top: 5px;
	display: none;
	height: 100px;
}

.router-stats-collection .router-stats, .router-stats-collection .router-no-stats
{
	float: left;
	margin-right: 10px;
}

.router-stats-collection .router-stats .secondary
{
	display: block;
}

.router-stats-collection .router-stats .graph
{
	display: block;
}

.router-stats-collection .router-stats .btn-group
{
	display: none;
}

/* Overview graphs - shared styles */
.graph-container { width: 100%; height: 100%; }

/* Workspace view - big graph */

#main_right_view { min-height: 400px; position: relative; }

.workspace-overview .overview-graph { width: 360px; height: 260px; padding: 10px; margin: 10px; position: relative; display: inline-block; border: 1px solid #E3E3E3; border-radius: 3px; }
.workspace-overview .overview-graph h3 { font-size: 13px; line-height: 15px; margin: 0; position: absolute; top: 20px; left: 40px; }

/* Workspace view - job summary */
.workspace-overview .job-overview { width: 760px; height: 260px; padding: 10px; margin: 10px; display: inline-block; border: 1px solid #E3E3E3; border-radius: 3px; overflow: auto; }

/* Left menu navigation: application (or node) list */

#left_menu_wrapper { position: relative; }

.application-list { position: absolute; top: 0; left: 0; width: 250px; border: 1px solid #e3e3e3; border-radius: 4px; }
.application-list-name { display: block; font-size: larger; font-weight: bold; }

.application-list-state { float: right; }
.application-list .version { padding-left: 1.5em; }

.with-application-list { margin-left: 270px; }

/* Version view - instance types list */
.instance-type-column { width: 45%; float: left; }

/* Version view - instance logs */
td.instance-log-button { width: 75px; }
td.instance-log-button a i { vertical-align: text-bottom; }

/* Node view - stats charts */
.node-chart { display: inline-block; position: relative; width: 100px; height: 150px; margin-right: 15px; float: right; }
.node-chart .chart, .node-chart .legend { position: absolute; left: 0; width:100px; }
.node-chart .chart { top: 0; height:100px; }
.node-chart .legend { top: 110px; height: 40px; }

/* Node view - side menu (from old app_nav.html) */
.application-list-details { display: block; font-size: smaller; color: #999999; }
.active .application-list-details { color: #e5e5e5; }

/* Node view - instance list, runtime list */
.node-table-header th { background: #F9F9F9; /* from Bootstrap .table-striped */ }

/* Node view - list by type */
.node-list-category { width: 32%; float: left; }

/* Node view - jobs list */
.all-jobs-button { float: right; }
.all-jobs-button a { font-weight: normal; }
table.node-jobs .job-overview { margin-bottom: 0; }

/* Separate node jobs list page */
h1 code.uuid-shrink { vertical-align: middle; font-size: 24px; }

/* New application / new version page */
.scm-container form label { width: 420px; line-height: 30px; height: 40px; }
.scm-container form label input { float: right; vertical-align: middle; }

.scm-form-submit { width: 420px; text-align: right; }

.scm-container .tab-pane { position: relative; }
.scm-list-container { position: absolute; top: 0; right: 0; }
.scm-list-container h4 { margin: 0; font-size: inherit; font-weight: normal; font-style: italic; }

/* File upload widget */
.file-uploader-widget { width: 420px; text-align: right; margin: 10px 0 30px 0; }
.file-uploader-widget div.drop, .file-uploader-widget div.status { display: inline-block; width: 170px; text-align: left; margin-right: 30px; }

.file-uploader-widget div.status { font-style: italic; }
.file-uploader-widget progress { width: 220px; }

